--- a/style.css
+++ b/style.css
@@ -1,7 +1,78 @@
-#game div {
-  border: 1px solid black;
+body {
+  background-color: #5c3f83;
+}
+
+h1 {
+  font-family: Helvetica;
+  text-align: center;
+  font-size: 75px;
+  background-clip: text;
+  background: linear-gradient(0.25turn, #1dadeb, #5ce0a3, #4d0fdf);
+  -webkit-background-clip: text;
+  color: rgba(223, 38, 38, 0.2);
+}
+
+#game {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  padding-bottom: 20px;
+  gap: 12px;
+  margin: 0;
+}
+
+#game div  {
+  border: 20px double black;
   width: 15%;
-  height: 200px;
+  height: 300px;
   margin: 10px;
-  display: inline-block;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#timer {
+  font-family: Helvetica;
+  text-align: center;
+  padding-bottom: 20px;
+  font-size: 70px;
+  background-clip: text;
+  background: linear-gradient(315deg, #3f0d12 0%, #a71d31 74%);
+  -webkit-background-clip: text;
+  color: rgba(223, 38, 38, 0.2);
+}
+
+#start {
+  font-family: Helvetica;
+  cursor: pointer;
+  width: 400px;
+  height: 400px;
+  font-size: 75px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  background: none;
+  color: rgb(172, 161, 202);
+  border-radius: 50%;
+  border: 10px double;
+}
+
+#end {
+  font-family: Helvetica;
+  cursor: pointer;
+  width: 400px;
+  height: 400px;
+  font-size: 75px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  background: none;
+  color: rgb(172, 161, 202);
+  border-radius: 50%;
+  border: 10px double;
+}
+
+.hidden {
+  display: none;
 }
